dont allow receiving on badbank wallet, introduce skipInstaller flag in build